2015-02-11  Per Bothner  <per@bothner.com>

	Implement support for patterns in 'let'.
	* lang/BindDecls.java: Make the methods non-static.
	(instance): New static fields.
	(allowShadowing, makeConstant): New fields to control variants.
	(define): New overridable method.
	* lang/Lambda.java (rewriteFormals): Use BindDecls.instance.
	* standard/MatchDef.java (scanDecls): Likewise.
	* standard/let.java: Rewrite to use BindDecls.

	* lang/Translator.java (renamedAliasCount): New helper method.

2015-02-09  Per Bothner  <per@bothner.com>

	* lang/Lambda.java: Add support for future pattern-matching
	using standard lambda macro - currently disabled.
	Add warning for conflicting deprecated type specifier syntax.

2015-01-11  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Add support for --console flag.
	Update --no-console to use CheckConsole class.
	(main): Likewise.
	* GuiConsole.java (main): Likewise.

2015-01-09  Andrea Bernardini <andrebask@gmail.com>

	* repl.java: Add --enable-anf and --debug-print-anf options.

2014-12-28  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Update class for 'receive'
	* standard/ImportFromLibrary.java (SRFI97Map): Map srfi-8 to
	an actual classname, rather than BUILTIN.  Needed if environment
	is restricted, as in r7rs libraries.
	* standard/require.java (featureMap): Add 'srfi-8, 'receive,
	and 'srfi-26.

2014-12-22  Per Bothner  <per@bothner.com>

	* lang/Lambda.java: Preliminary support for patterns, but only
	if handlePatterns flag is set.
	* standard/Scheme.java (mlambda): New constant static field.

	* lang/BindDecls.java: New helper class for parsing pattern.
	* standard/MatchDef.java: New class for (! ...) declaration syntax.
	* standard/Scheme.java (initScheme): Adding binding for '!'
	* Makefile.am :update accorinly.

	* standard/define.java (scanForm): Complain about define-private
	in interactive module.

2014-12-21  Per Bothner  <per@bothner.com>
